--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "konva": "^9.3.6",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
