--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server":"nodemon websocket.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "ws": "nodemon websocket.js",
+    "node": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.3",
+    "nodemon": "^3.1.0",
+    "ws": "^8.16.0"
+  }
 }
