--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
+    "react-use-websocket": "^4.8.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
